Redux toolkit query (#81)
* WIP: Generate & use redux-toolkit-query

* Fix auth configuration & not authorized handler

* Fix client docker image build