@@ -2,20 +2,15 @@ package dmo.server.api.v1;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-//import org.springframework.security.core.Authentication;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import springfox.documentation.service.ApiKey;
-import springfox.documentation.service.AuthorizationScope;
-import springfox.documentation.service.OAuth;
-import springfox.documentation.service.ResourceOwnerPasswordCredentialsGrant;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 
 @Configuration
 @EnableSwagger2
@@ -26,12 +21,12 @@ public class SpringFoxConfV1 {
         return new Docket(DocumentationType.SWAGGER_2)
                 .protocols(new HashSet<>(Arrays.asList("http", "https")))
                 .groupName("v1")
-                .securitySchemes(Collections.singletonList(
+                .securitySchemes(List.of(
                         /*new OAuth(
                                 "jwt",
-                                Collections.singletonList(new AuthorizationScope("default", "Default auth scope")),
+                                List.of(new AuthorizationScope("default", "Default auth scope")),
                                 // TODO generate login URL based on incoming request protocol and port
-                                Collections.singletonList(new ResourceOwnerPasswordCredentialsGrant("/login"))
+                                List.of(new ResourceOwnerPasswordCredentialsGrant("/login"))
                         ),*/
                         new ApiKey("Bearer", "Authorization", "header")
                 ))
